--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Ripples Reveal Big Bang’s Smoking Gun</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+   <header>
+       <nav>
+           <div id = "left-nav">
+               <img class = "hamburger icon" src="hamburger.png">
+               <img class = "search icon" src="search.png">
+               <a class = "space-cosmos-link" href="#">SPACE & COSMOS</a>
+           </div>
+           <div id = "center-nav">
+            <img id = "nyt-logo" src = "nyt-logo.png">
+            </div>
+           <div id = "right-nav">
+            <button class = "btn subscribe-btn">SUBSCRIBE NOW</button>
+            <button class = "btn log-in-btn">LOG IN</button>
+            </div>
+       </nav>
+   </header>
+   <main></main>
+   <footer></footer>
 </body>
 </html>
