navbar complete with stickiness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <header>
        <nav>
            <div id = "left-nav">
                <img class = "hamburger icon" src="hamburger.png">
@@ -22,8 +21,141 @@
             <button class = "btn log-in-btn">LOG IN</button>
             </div>
        </nav>
-   </header>
-   <main></main>
+   <main>
+       <div>hddddddddddddddd</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+       <div>h</div>
+   </main>
    <footer></footer>
 </body>
 </html>
