add title and main satellite img

--- a/index.html
+++ b/index.html
@@ -22,139 +22,10 @@
             </div>
        </nav>
    <main>
-       <div>hddddddddddddddd</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
-       <div>h</div>
+       <section id = "main-content">
+            <h1>Space Ripples Reveal Big Bang’s<br> Smoking Gun</h1>
+            <img id = "satellite-img" src = "nyt-satellite.jpg">
+       </section>
    </main>
    <footer></footer>
 </body>
