add title content

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             </div>
        </nav>
    <main>
-       <section id = "main-content">
+       <section id = "title-content">
             <h1>Space Ripples Reveal Big Bang’s<br> Smoking Gun</h1>
-            <img id = "satellite-img" src = "nyt-satellite.jpg">
+            <img class = "satellite-img" src = "nyt-satellite.jpg">
+            <div class = "satellite-img info">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so<br> uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. <span id = "img-credit">Rick Friedman for The New York Times</span></div>
        </section>
    </main>
    <footer></footer>
